# git-fat-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: backend.rs  fat.rs  git.rs  main.rs  util.rs
